Changement du php

--- a/Projet/TopPrint.html
+++ b/Projet/TopPrint.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-            <float class="titre">
-                Print'dustries™
-            </float>
-    
+    <float class="titre">
+        Print'dustries™
+    </float>
+    <float class="TextEnSavoirPlus">
+
+    </float>
 </body>
-</html>    
+
+</html>
